--- a/source/RouteViewer/RouteViewer.csproj
+++ b/source/RouteViewer/RouteViewer.csproj
@@ -120,7 +120,9 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="OpenTK.dll.config" />
+    <None Include="OpenTK.dll.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -136,10 +138,6 @@
     <Compile Include="WorldR.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DevTools\LBAHeader\LBAHeader.csproj">
-      <Project>{e9b64673-65b7-4d77-a4db-4b441a7c9197}</Project>
-      <Name>LBAHeader</Name>
-    </ProjectReference>
     <ProjectReference Include="..\LibRender2\LibRender2.csproj">
       <Project>{68215476-302c-49f2-9f7e-aae20a2b6b12}</Project>
       <Name>LibRender2</Name>
