Update: NuGet packages

--- a/source/Plugins/Object.CsvB3d/Object.CsvB3d.csproj
+++ b/source/Plugins/Object.CsvB3d/Object.CsvB3d.csproj
@@ -54,6 +54,9 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
