--- a/source/Plugins/Object.LokSim/Object.LokSim.csproj
+++ b/source/Plugins/Object.LokSim/Object.LokSim.csproj
@@ -51,6 +51,9 @@
       <Name>OpenBveApi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
