--- a/source/TrainEditor2/App.config
+++ b/source/TrainEditor2/App.config
@@ -15,6 +15,14 @@
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
       </dependentAssembly>
 	  <probing privatePath="Data\Formats" />
-    </assemblyBinding>
+     <dependentAssembly>
+	    <assemblyIdentity name="OpenTK" publicKeyToken="bad199fe84eb3df4" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+	   </dependentAssembly>
+	   <dependentAssembly>
+	    <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+	   </dependentAssembly>
+	  </assemblyBinding>
   </runtime>
 </configuration>
