--- a/source/Plugins/Object.Animated/Object.Animated.csproj
+++ b/source/Plugins/Object.Animated/Object.Animated.csproj
@@ -50,6 +50,9 @@
       <Name>OpenBveApi</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
