--- a/source/Plugins/OpenBveAts/OpenBveAts.csproj
+++ b/source/Plugins/OpenBveAts/OpenBveAts.csproj
@@ -74,6 +74,9 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Target Name="AfterBuild">
     <ItemGroup>
       <OutputFiles Include="$(TargetDir)$(TargetName).*" />
