--- a/source/Plugins/Sound.Flac/Sound.Flac.csproj
+++ b/source/Plugins/Sound.Flac/Sound.Flac.csproj
@@ -70,6 +70,9 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Target Name="AfterBuild">
     <ItemGroup>
       <OutputFiles Include="$(TargetDir)$(TargetName).*" />
