--- a/source/Plugins/Texture.Tga/Texture.Tga.csproj
+++ b/source/Plugins/Texture.Tga/Texture.Tga.csproj
@@ -67,6 +67,9 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Target Name="AfterBuild">
     <ItemGroup>
       <OutputFiles Include="$(TargetDir)$(TargetName).*" />
