--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{8DAA1CF4-A29A-42CE-8649-34E0FBC0D97C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Route.CsvRw</RootNamespace>
+    <RootNamespace>Bve5RouteParser</RootNamespace>
     <AssemblyName>Route.CsvRw</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
