Fix: Some TGA files broken
Closes https://github.com/leezer3/OpenBVE/issues/499

--- a/source/Plugins/Texture.Tga/Texture.Tga.csproj
+++ b/source/Plugins/Texture.Tga/Texture.Tga.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PixelProperties.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Plugin.Parser.cs">
       <DependentUpon>Plugin.cs</DependentUpon>
