Change: Improve dispose and clear with extension method

--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -55,6 +55,7 @@
     <Compile Include="MotionBlur\MotionBlurMode.cs" />
     <Compile Include="Objects\FaceState.cs" />
     <Compile Include="Objects\ObjectLibrary.cs" />
+    <Compile Include="Objects\ObjectLibrary.ListExtensions.cs" />
     <Compile Include="openGL\FrameBufferObject.cs" />
     <Compile Include="openGL\IndexBufferObject.cs" />
     <Compile Include="openGL\ShaderLayout.cs" />
