--- a/source/OpenBVE/packages.config
+++ b/source/OpenBVE/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Namotion.Reflection" version="1.0.12" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="NJsonSchema" version="10.1.24" targetFramework="net461" />
   <package id="OpenTK" version="3.2" targetFramework="net461" />
   <package id="SharpCompress" version="0.25.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
