Change: Improve makefile output file naming [ci skip]
This moves the final rename step to the makefile, as opposed to Travis.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ linuxbuild.*
 macbuild.*
 /mac/
 installers/debian.deb
+OpenBVE-*.zip
+OpenBVE-*.deb
+OpenBVE-*.dmg
 
 #Debian Build directory
 installers/debian/usr/lib/*
