--- a/source/Plugins/Route.Mechanik/Route.Mechanik.csproj
+++ b/source/Plugins/Route.Mechanik/Route.Mechanik.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Block.cs" />
     <Compile Include="Structures\RouteObject.cs" />
+    <Compile Include="Structures\SoundEvent.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\OpenBveApi\OpenBveApi.csproj">
