Change: Add stations, use method for distance parsing

--- a/source/Plugins/Route.Mechanik/Route.Mechanik.csproj
+++ b/source/Plugins/Route.Mechanik/Route.Mechanik.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Structures\Block.cs" />
     <Compile Include="Structures\RouteObject.cs" />
     <Compile Include="Structures\SoundEvent.cs" />
+    <Compile Include="Structures\StationStop.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\OpenBveApi\OpenBveApi.csproj">
