New: Add HornBlow event
Used to trigger the AI driver into playing the horn

--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Structures\StructureData.cs" />
     <Compile Include="Structures\Trains\Brightness.cs" />
     <Compile Include="Structures\Trains\DestinationEvent.cs" />
+    <Compile Include="Structures\Trains\HornBlow.cs" />
     <Compile Include="Structures\Trains\Limit.cs" />
     <Compile Include="Structures\Trains\Marker.cs" />
     <Compile Include="Structures\Trains\StopRequest.cs" />
