--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -2,7 +2,11 @@
 trigger:
   tags:
     include:
-    - *
+      - '*'
+      - 1.*
+  branches:
+    exclude:
+      - '*'
 
 ### Test on latest Windows and .Net version
 
